gccida/g1/init_regs
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1081:14: error: use of undeclared identifier 'v16'; did you mean 'v15'?
reg_class ( *v16)[25]; // rdx 
             ^~~
             v15
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1080:20: note: 'v15' declared here
HARD_REG_ELT_TYPE *v15; // rcx 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1081:18: error: subscripted value is not an array, pointer, or vector
reg_class ( *v16)[25]; // rdx 
~~~~~~~~~~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1084:14: error: use of undeclared identifier 'v19'; did you mean 'v15'?
reg_class ( *v19)[25]; // rbx 
             ^~~
             v15
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1080:20: note: 'v15' declared here
HARD_REG_ELT_TYPE *v15; // rcx 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1084:18: error: subscripted value is not an array, pointer, or vector
reg_class ( *v19)[25]; // rbx 
~~~~~~~~~~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1090:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v25; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1081:1: note: enum 'reg_class' is hidden by a non-type declaration of 'reg_class' here
reg_class ( *v16)[25]; // rdx 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1095:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v30; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1081:1: note: enum 'reg_class' is hidden by a non-type declaration of 'reg_class' here
reg_class ( *v16)[25]; // rdx 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1096:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class *v31; // rax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1081:1: note: enum 'reg_class' is hidden by a non-type declaration of 'reg_class' here
reg_class ( *v16)[25]; // rdx 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1097:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class *i1; // rax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1081:1: note: enum 'reg_class' is hidden by a non-type declaration of 'reg_class' here
reg_class ( *v16)[25]; // rdx 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1100:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class *v35; // rsi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1081:1: note: enum 'reg_class' is hidden by a non-type declaration of 'reg_class' here
reg_class ( *v16)[25]; // rdx 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1122:14: error: use of undeclared identifier 'v57'; did you mean 'v51'?
reg_class ( *v57)[25]; // rdx 
             ^~~
             v51
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1116:7: note: 'v51' declared here
char *v51; // r12 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1122:18: error: subscripted value is not an array, pointer, or vector
reg_class ( *v57)[25]; // rdx 
~~~~~~~~~~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1125:14: error: use of undeclared identifier 'v60'
reg_class ( *v60)[25]; // rdx 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1130:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v65; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1081:1: note: enum 'reg_class' is hidden by a non-type declaration of 'reg_class' here
reg_class ( *v16)[25]; // rdx 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1132:14: error: use of undeclared identifier 'v67'; did you mean 'v66'?
reg_class ( *v67)[25]; // r14 
             ^~~
             v66
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1131:8: note: 'v66' declared here
_BYTE *v66; // r13 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1132:18: error: subscripted value is not an array, pointer, or vector
reg_class ( *v67)[25]; // r14 
~~~~~~~~~~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1137:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v72; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1144:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class class1a; // [rsp+18h] [rbp-B0h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1081:1: note: enum 'reg_class' is hidden by a non-type declaration of 'reg_class' here
reg_class ( *v16)[25]; // rdx 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1149:14: error: use of undeclared identifier 'v84'; did you mean 'v83'?
reg_class ( *v84)[25]; // [rsp+30h] [rbp-98h] 
             ^~~
             v83
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1148:8: note: 'v83' declared here
_BYTE *v83; // [rsp+28h] [rbp-A0h] 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/regclass.c:1149:18: error: subscripted value is not an array, pointer, or vector
reg_class ( *v84)[25]; // [rsp+30h] [rbp-98h] 
~~~~~~~~~~~~~~~~~^~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_regs/src/obj/regclass.o] Error 1
